--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,8 @@
 <footer>
   <small>
-    Created by <a href="https://danurbanowicz.com">Dan Urbanowicz</a>.
-    Check out the <a href="{{ pkg.repository.url }}">GitHub project</a>. Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a>
+   © 02024 AI Mindset. 
+   <a href="https://t.me/aimindset">Telegram</a>
+   <a href="https://t.me/aimindset">LinkedIn</a>
+
   </small>
 </footer>
