--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,7 +1,7 @@
 :root {
-	--primary: #0087ac;
+	--primary: #0075b9;
 	--secondary: #ebffff9c;
-	--background: #FFF0EB;
+	--background: #f5f1f0;
 }
 
 *, *:before, *:after {
@@ -26,10 +26,11 @@ body {
 	height: 100vh;
 	grid-template-rows: auto 1fr auto;
 	background-color: var(--background);
+	justify-content: center;
 }
 
 main {
-	max-width: 37.5em;
+	max-width: 45em;
 }
 
 p,
@@ -199,4 +200,22 @@ button {
 	:root {
 		font-size: 1.1rem;
 	}
+}
+
+.header-brand {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.header-brand em {
+	font-style: normal;
+	font-weight: bold;
+	font-size: 1.5rem;
+	color: var(--primary);
+}
+
+.site-logo {
+    height: 40px;
+    width: auto;
 }
